--- a/x11/libxkbcommon/Makefile
+++ b/x11/libxkbcommon/Makefile
@@ -13,13 +13,20 @@ COMMENT=	Keymap handling library for toolkits and window systems
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	xkeyboard-config>0:x11/xkeyboard-config
 
-USES=		bison meson pkgconfig tar:xz xorg
-USE_XORG=	xcb
+USES=		bison meson pkgconfig tar:xz
 MESON_ARGS=	-Denable-docs=false \
 		-Denable-wayland=false \
 		-Dx-locale-root="${PREFIX}/lib/X11/locale"
+
+OPTIONS_DEFINE=		X11
+OPTIONS_DEFAULT=	X11
+OPTIONS_SUB=		yes
+
+X11_USES=	xorg
+X11_USE=	XORG=xcb
+X11_MESON_TRUE=	enable-x11
+X11_RUN_DEPENDS=xkeyboard-config>0:x11/xkeyboard-config
 
 .include <bsd.port.pre.mk>
 
