--- a/graphics/cairo/Makefile
+++ b/graphics/cairo/Makefile
@@ -42,13 +42,12 @@ OPTIONS_SLAVE=	${ARCH:tu}
 OPTIONS_SUB=	yes
 
 X11_USES=	xorg
-X11_USE=	xorg=x11,xext,xrender
+X11_USE=	xorg=x11,xext,xrender,xorgproto:both
 X11_CONFIGURE_ENABLE=xlib
 
-OPENGL_USES=	gl xorg
-OPENGL_USE=	gl=gl,egl xorg=xorgproto:both
+OPENGL_USES=	gl
+OPENGL_USE=	gl=gl,egl
 OPENGL_CONFIGURE_ENABLE=gl egl
-OPENGL_IMPLIES=	X11
 
 GLIB_DESC=	Enable GObject Functions Feature
 GLIB_USES=	gettext-runtime
